# zephyr-projects

./: .gitignore  LICENSE  README.md  ttyACM0.moserial.conf
docs/: ZEPHYR_PROJECT_SETUP_GUIDE.md
lib/bthome/: CMakeLists.txt  Kconfig
lib/bthome/include/: bthome.h
lib/bthome/include/zephyr/bthome/: bthome.h
lib/bthome/src/: bthome.c
lib/bthome/zephyr/: module.yml
my_projects/000_hello_world/: prj.conf
my_projects/000_hello_world/src/: main.c
my_projects/001_simple_blink/: CMakeLists.txt  prj.conf
my_projects/001_simple_blink/src/: main.c
my_projects/002_minimal_uart/: CMakeLists.txt  prj.conf
my_projects/002_minimal_uart/src/: main.c
my_projects/003_uart_test_dk/: CMakeLists.txt  prj.conf
my_projects/003_uart_test_dk/src/: main.c
my_projects/004_led_toggle_test/: CMakeLists.txt  README.md  prj.conf
my_projects/004_led_toggle_test/src/: main.c
my_projects/100_bthome_counter/: CMakeLists.txt  README.md  prj.conf
my_projects/100_bthome_counter/src/: main.c
my_projects/101_bthome_counter_lowpower/: CMakeLists.txt  README.md  prj.conf
my_projects/101_bthome_counter_lowpower/src/: main.c
my_projects/102_bthome_counter_ultralowpower/: CMakeLists.txt  README.md  prj.conf
my_projects/102_bthome_counter_ultralowpower/src/: main.c
my_projects/bthome_counter/: README.md  prj.conf
my_projects/bthome_counter/src/: main.c
my_projects/bthome_ultrasonic/: CMakeLists.txt  README.md  prj.conf
my_projects/bthome_ultrasonic/boards/: esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  (+2 more)
my_projects/hello_world/: README.md
(+3 files in other folders)
